# truss_optimization

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: analysis.cpp  analysis.hpp  application.cpp  application.hpp  main.cpp  optimization.cpp  optimization.hpp  shell.html  unique_handle.hpp  unique_resource.hpp  vec.hpp
